--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,23 @@
 
+*{
 
+margin: 0;
+padding: 0;
+
+}
+
+
+.DivPrincipal{
+
+    width: 100%;
+display: flex;
+flex-direction: column;
+}
+
+.DivSecundario{
+align-items: center;
+        width: 100%;
+    display: flex;
+    flex-direction: column;
+    
+}
