--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,13 +1,15 @@
-.Navbar ul li{
+.Navbar, ul, li, a, p{
 text-decoration: none;
 list-style-type: none;
+
     display: flex;
-    
+    justify-content: center;
+    align-items: center;
     background-color: black;
     color: white;
     width: 100%;
 
-justify-content: center;
+
 }
 
 
