--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,9 +1,8 @@
 .Header{
+width: 100;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: red;
-    color: white;
-    width: 100%;
+}
+.imgFondo{
+height: 15rem;
+width: 100%;
 }
