--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -1,19 +1,12 @@
 
 
 
-.itemListContainer h2, ul, li{
-
+.itemListContainer {
+width: 100%;
 display: flex;
-
-color: white;
-list-style-type: none;
-text-decoration: none;
-justify-content: center;
-flex-direction: row;
+margin-top: 1rem;
+margin-bottom: 1rem;
+flex-direction: column;
 align-items: center;
-}
-
-.itemListContainer li{
-color: black;
-    background-color: aquamarine;
-    }
+justify-content: center;
+ }
