--- a/src/components/CardInstruments/CardInstruments.css
+++ b/src/components/CardInstruments/CardInstruments.css
@@ -4,4 +4,41 @@
     margin-bottom: 3rem;
 margin-left: 5rem;
 border: solid 1px black;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+}
+
+.buttonCard{
+margin-top: 1rem;
+    height: 2rem;
+width: 4rem;
+border: 2px solid black;
+cursor: pointer;
+}
+
+.linkCard{
+display: flex;
+align-items: center;
+justify-content: center;
+height: 5rem;
+    margin-top: 1rem;
+background-color: white;
+width: 4rem;
+}
+
+.btnAgregarSacar{
+width: 15rem;
+    display: flex;
+margin-bottom: 1rem;
+
+}
+
+.btnAgregarSacar button{
+margin: 2rem;
+height: 3rem;
+width: auto;
+border: 2px solid black;
+cursor: pointer;
 }
