--- a/src/components/CardInstrumentInfo/CardInstrumentInfo.css
+++ b/src/components/CardInstrumentInfo/CardInstrumentInfo.css
@@ -1,7 +1,9 @@
 .tarjet{
 
-    margin-top: 3rem;
-    margin-bottom: 3rem;
-margin-left: 5rem;
-border: solid 1px black;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+
+
 }
