--- a/src/components/CardInstruments/CardInstruments.css
+++ b/src/components/CardInstruments/CardInstruments.css
@@ -1,8 +1,6 @@
 .tarjet{
 
-    margin-top: 3rem;
-    margin-bottom: 3rem;
-margin-left: 5rem;
+ margin: 2rem;
 border: solid 1px black;
 display: flex;
 flex-direction: column;
@@ -11,11 +9,13 @@ align-items: center;
 }
 
 .buttonCard{
+display: flex;
 margin-top: 1rem;
-    height: 2rem;
-width: 4rem;
+    height: auto;
+width: 5rem;
 border: 2px solid black;
 cursor: pointer;
+font-size: 1.5rem;
 }
 
 .linkCard{
@@ -38,7 +38,8 @@ margin-bottom: 1rem;
 .btnAgregarSacar button{
 margin: 2rem;
 height: 3rem;
-width: auto;
+width: 50px;
 border: 2px solid black;
 cursor: pointer;
+font-size: 2rem;
 }
